--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
         <h3>I'm Rupankar</h3>
         <span class="tag">😎 Enthusiast To Learn New Technology 😎</span>
         
-        <p>I'm currently pursuing B.Tech (CSE) at Swami Vivekananda Institute Of Science & Technology(SVIST). I'm currently living in Kolkata. My area of interest includesWeb & App Development AI, ML and Cyber Security. My hobbies include travelling,listening to music, audiobooks and podcasts. With a strong passion for coding and learning something new, I actively pursued opportunities to develop my skills and knowledge.. </p>
+        <p>𝘐 𝘢𝘮 𝘤𝘶𝘳𝘳𝘦𝘯𝘵𝘭𝘺 𝘱𝘶𝘳𝘴𝘶𝘪𝘯𝘨 𝘢 𝘉.𝘛𝘦𝘤𝘩 𝘪𝘯 𝘊𝘰𝘮𝘱𝘶𝘵𝘦𝘳 𝘚𝘤𝘪𝘦𝘯𝘤𝘦 𝘢𝘯𝘥 𝘌𝘯𝘨𝘪𝘯𝘦𝘦𝘳𝘪𝘯𝘨 𝘢𝘵 𝘚𝘸𝘢𝘮𝘪 𝘝𝘪𝘷𝘦𝘬𝘢𝘯𝘢𝘯𝘥𝘢 𝘐𝘯𝘴𝘵𝘪𝘵𝘶𝘵𝘦 𝘰𝘧 𝘚𝘤𝘪𝘦𝘯𝘤𝘦 & 𝘛𝘦𝘤𝘩𝘯𝘰𝘭𝘰𝘨𝘺 (𝘚𝘝𝘐𝘚𝘛) 𝘪𝘯 𝘒𝘰𝘭𝘬𝘢𝘵𝘢. 𝘔𝘺 𝘢𝘳𝘦𝘢𝘴 𝘰𝘧 𝘪𝘯𝘵𝘦𝘳𝘦𝘴𝘵 𝘪𝘯𝘤𝘭𝘶𝘥𝘦 𝘸𝘦𝘣 𝘢𝘯𝘥 𝘢𝘱𝘱 𝘥𝘦𝘷𝘦𝘭𝘰𝘱𝘮𝘦𝘯𝘵, 𝘢𝘳𝘵𝘪𝘧𝘪𝘤𝘪𝘢𝘭 𝘪𝘯𝘵𝘦𝘭𝘭𝘪𝘨𝘦𝘯𝘤𝘦, 𝘮𝘢𝘤𝘩𝘪𝘯𝘦 𝘭𝘦𝘢𝘳𝘯𝘪𝘯𝘨, 𝘢𝘯𝘥 𝘤𝘺𝘣𝘦𝘳 𝘴𝘦𝘤𝘶𝘳𝘪𝘵𝘺. 𝘐 𝘩𝘢𝘷𝘦 𝘢 𝘴𝘵𝘳𝘰𝘯𝘨 𝘱𝘢𝘴𝘴𝘪𝘰𝘯 𝘧𝘰𝘳 𝘤𝘰𝘥𝘪𝘯𝘨 𝘢𝘯𝘥 𝘤𝘰𝘯𝘵𝘪𝘯𝘶𝘰𝘶𝘴𝘭𝘺 𝘴𝘦𝘦𝘬 𝘰𝘱𝘱𝘰𝘳𝘵𝘶𝘯𝘪𝘵𝘪𝘦𝘴 𝘵𝘰 𝘦𝘯𝘩𝘢𝘯𝘤𝘦 𝘮𝘺 𝘴𝘬𝘪𝘭𝘭𝘴 𝘢𝘯𝘥 𝘬𝘯𝘰𝘸𝘭𝘦𝘥𝘨𝘦.
+
+          𝘖𝘶𝘵𝘴𝘪𝘥𝘦 𝘰𝘧 𝘢𝘤𝘢𝘥𝘦𝘮𝘪𝘤𝘴, 𝘐 𝘦𝘯𝘫𝘰𝘺 𝘵𝘳𝘢𝘷𝘦𝘭𝘪𝘯𝘨, 𝘭𝘪𝘴𝘵𝘦𝘯𝘪𝘯𝘨 𝘵𝘰 𝘮𝘶𝘴𝘪𝘤, 𝘢𝘯𝘥 𝘦𝘯𝘨𝘢𝘨𝘪𝘯𝘨 𝘸𝘪𝘵𝘩 𝘢𝘶𝘥𝘪𝘰𝘣𝘰𝘰𝘬𝘴 𝘢𝘯𝘥 𝘱𝘰𝘥𝘤𝘢𝘴𝘵𝘴. 𝘔𝘺 𝘥𝘦𝘥𝘪𝘤𝘢𝘵𝘪𝘰𝘯 𝘵𝘰 𝘭𝘦𝘢𝘳𝘯𝘪𝘯𝘨 𝘢𝘯𝘥 𝘮𝘺 𝘦𝘯𝘵𝘩𝘶𝘴𝘪𝘢𝘴𝘮 𝘧𝘰𝘳 𝘵𝘦𝘤𝘩𝘯𝘰𝘭𝘰𝘨𝘺 𝘥𝘳𝘪𝘷𝘦 𝘮𝘦 𝘵𝘰 𝘴𝘵𝘢𝘺 𝘶𝘱𝘥𝘢𝘵𝘦𝘥 𝘸𝘪𝘵𝘩 𝘵𝘩𝘦 𝘭𝘢𝘵𝘦𝘴𝘵 𝘥𝘦𝘷𝘦𝘭𝘰𝘱𝘮𝘦𝘯𝘵𝘴 𝘪𝘯 𝘮𝘺 𝘧𝘪𝘦𝘭𝘥𝘴 𝘰𝘧 𝘪𝘯𝘵𝘦𝘳𝘦𝘴𝘵. </p>
         
         <div class="box-container">
             <!-- <div class="box">
@@ -99,7 +101,7 @@
 
          <!-- Resume -->
         <div class="resumebtn">
-            <a href="https://drive.google.com/file/d/1k7jlw7Cn_fgLb98A_Mad_5OqIiuXgAtf/view?usp=drive_link" target="_blank" class="btn"><span>Check Resume</span>
+            <a href="https://drive.google.com/file/d/1kiT0zmQ9mPTBJlkL24z3Y4_n4KLq3DIQ/view?usp=sharing" target="_blank" class="btn"><span>Check Resume</span>
                 <i class="fas fa-chevron-right"></i>
             </a>
         </div>
